@@ -52,8 +52,39 @@ class ExecutionPlanBuilder(graph: GraphDatabaseService) extends PatternGraphBuil
   }
 
   def buildPipes(in: AbstractQuery): (Pipe, Boolean) = in match {
-    case q:Query => buildQuery(q)
-    case q:IndexOperation => buildIndexQuery(q)
+    case q: Query          => buildQuery(q)
+    case q: IndexOperation => buildIndexQuery(q)
+    case q: Union          => buildUnionQuery(q)
+  }
+
+  def buildUnionQuery(union: Union): (Pipe, Boolean) = {
+    checkQueriesHaveSameColumns(union)
+
+    val combined = union.queries.map(buildQuery)
+
+    val pipes = combined.map(_._1)
+    val updating = combined.map(_._2).reduce(_ || _)
+
+    (new UnionPipe(pipes), updating)
+  }
+
+  private def checkQueriesHaveSameColumns(union: Union) {
+    val allColumns: Seq[List[String]] = union.queries.map(columns)
+    val first = allColumns.head
+    val allTheSame = allColumns.forall(x => x == first)
+
+    if (!allTheSame) {
+      throw new SyntaxException("All sub queries in an UNION must have the same column names")
+    }
+  }
+
+  private def columns(q:Query):List[String] = {
+    var last = q
+
+    while(last.tail.nonEmpty)
+      last = last.tail.get
+
+    last.returns.columns
   }
 
   def buildIndexQuery(op: IndexOperation): (Pipe, Boolean) = (new IndexOperationPipe(op), true)
