@@ -4,6 +4,7 @@ o Added the possibility to add/remove labels to nodes
 o Now uses the labels specified in MATCH while matching
 o Supports label matching with or ("|") syntax in MATCH
 o Added the possibility to add label-based indexes
+o Added UNION
 
 1.9.RC
 ------
